# goit-python-web-hw7-postgresql

./: .gitignore  alembic.ini  connect_db.py  crud_cli.py  models.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: 4a0dace2c84c_init.py  d4d7b91e34cf_init.py
query/: query_1.py  query_10.py  query_11.py  query_12.py  query_2.py  query_3.py  query_4.py  query_5.py  query_6.py  query_7.py  query_8.py  query_9.py
